# tree-sitter-ponos

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  build.zig  build.zig.zon  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-ponos.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_ponos/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterPonos/: ponos.h
bindings/swift/TreeSitterPonosTests/: TreeSitterPonosTests.swift
bindings/zig/: root.zig  test.zig
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: expressions.txt  functions.txt  literals.txt  source_file.txt  statements.txt
